--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -110,6 +110,8 @@
 @media only screen and (min-width: 551px) and (max-width: 767px) {
   .footer-inform-content {
     margin-top: 30px;
+    text-align: -webkit-center;
+    width: 100%;
   }
   .footer-same {
     margin-top: 30px;
